# run-synthmorph

./: .gitignore  README.md  analyze_output.ipynb  generate_script.ipynb  pyproject.toml  visualize_overlay.ipynb
config/: apply.yaml  config.yaml  register.yaml
