[project]
name = "run-synthmorph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "nibabel>=5.3.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "upenn-be5370-utils",
]

[tool.uv.sources]
upenn-be5370-utils = { git = "https://github.com/pyushkevich/upenn_be5370_utils.git" }
